Modifies PyUnit yaml'

--- a/.github/workflows/PyUnit-testing.yml
+++ b/.github/workflows/PyUnit-testing.yml
@@ -48,26 +48,25 @@ jobs:
             if [[ $file == *solved.py ]]; then
                 # Extract the directory name
                 directory=$(dirname "$file")
+                # Construct absolute paths for Solved and Unsolved directories
+                solved_dir="${directory}/Solved"
+                unsolved_dir="${directory}/Unsolved"
                 # Print the directory name
                 echo "Directory: $directory"
-                # Change directory to the "Solved" subdirectory
-                cd "$directory" || exit 1
                 # Copy the solved.py file to the "Unsolved" subdirectory
-                cp solved.py ../Unsolved
-                # Change directory to the "Unsolved" subdirectory
-                cd ../Unsolved || exit 1
+                cp "${solved_dir}/solved.py" "${unsolved_dir}"
                 # Rename the unsolved.py file to unsolved_tmp.py
-                mv unsolved.py unsolved_tmp.py
+                mv "${unsolved_dir}/unsolved.py" "${unsolved_dir}/unsolved_tmp.py"
                 # Rename the solved.py file to unsolved.py
-                mv solved.py unsolved.py
+                mv "${unsolved_dir}/solved.py" "${unsolved_dir}/unsolved.py"
                 # Run the test.py file on the unsolved.py file
                 echo "Testing unsolved file"
-                python tests.py unsolved.py
+                python "${unsolved_dir}/tests.py" "${unsolved_dir}/unsolved.py"
                 # Move the unsolved.py file back to the "Solved" subdirectory
-                mv unsolved.py solved.py
+                mv "${unsolved_dir}/unsolved.py" "${solved_dir}/solved.py"
                 # Move the unsolved_tmp.py file back to the "Unsolved" subdirectory
-                mv unsolved_tmp.py unsolved.py
+                mv "${unsolved_dir}/unsolved_tmp.py" "${unsolved_dir}/unsolved.py"
                 # Copy the solved.py file to the "Solved" subdirectory
-                cp solved.py ../Solved
+                cp "${solved_dir}/solved.py" "${solved_dir}/.."
             fi
           done
