--- a/.github/workflows/PyUnit-testing.yml
+++ b/.github/workflows/PyUnit-testing.yml
@@ -50,9 +50,9 @@ jobs:
                 directory=$(dirname "$file")
                 # Construct absolute paths for Solved and Unsolved directories
                 solved_dir="$directory"
+                echo "Solved Directory: $solved_dir"
                 unsolved_dir="${directory/\/Solved/\/Unsolved}
-                # Print the directory name
-                echo "Directory: $directory"
+                echo "Unsolved Directory: $unsolved_dir"
                 # Copy the solved.py file to the "Unsolved" subdirectory
                 cp "${solved_dir}/solved.py" "${unsolved_dir}"
                 # Rename the unsolved.py file to unsolved_tmp.py
@@ -62,11 +62,9 @@ jobs:
                 # Run the test.py file on the unsolved.py file
                 echo "Testing unsolved file"
                 python "${unsolved_dir}/tests.py" "${unsolved_dir}/unsolved.py"
-                # Move the unsolved.py file back to the "Solved" subdirectory
-                mv "${unsolved_dir}/unsolved.py" "${solved_dir}/solved.py"
+                # Remove the unsolved.py file to the solved.
+                rm "${unsolved_dir}/unsolved.py"
                 # Move the unsolved_tmp.py file back to the "Unsolved" subdirectory
                 mv "${unsolved_dir}/unsolved_tmp.py" "${unsolved_dir}/unsolved.py"
-                # Copy the solved.py file to the "Solved" subdirectory
-                cp "${solved_dir}/solved.py" "${solved_dir}/.."
             fi
           done
