--- a/.github/workflows/PyUnit-testing.yml
+++ b/.github/workflows/PyUnit-testing.yml
@@ -61,9 +61,11 @@ jobs:
                 mv "${unsolved_dir}/solved.py" "${unsolved_dir}/unsolved.py"
                 # Run the test.py file on the unsolved.py file
                 echo "Testing unsolved file"
-                python "${unsolved_dir}/tests.py" "${unsolved_dir}/unsolved.py"
+                cd "${unsolved_dir}"
+                python tests.py unsolved.py
                 # Remove the unsolved.py file to the solved.
-                rm "${unsolved_dir}/unsolved.py"
+                rm unsolved.py
+                cd ..
                 # Move the unsolved_tmp.py file back to the "Unsolved" subdirectory
                 mv "${unsolved_dir}/unsolved_tmp.py" "${unsolved_dir}/unsolved.py"
             fi
