Adds a for loop

--- a/.github/workflows/PyUnit-testing.yml
+++ b/.github/workflows/PyUnit-testing.yml
@@ -43,36 +43,39 @@ jobs:
 
       - name: PyUnit Testing
         run: |
+          # Initialize an empty array to store the paths of solved files
+          solved_files=()
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
             # Check for Python solution files
             if [[ $file == *solved.py ]]; then
-                # Extract the directory name
-                directory=$(dirname "$file")
-                echo "In the $directory directory"
-                # Construct absolute paths for Solved and Unsolved directories
-                solved_dir="$directory"
-                echo "Solved Directory: $solved_dir"
-                unsolved_dir="${directory/\/Solved/\/Unsolved}"
-                echo "Unsolved Directory: $unsolved_dir"
-                # Copy the solved.py file to the "Unsolved" subdirectory
-                mv "${solved_dir}/solved.py" "${unsolved_dir}"
-                echo "Copied $file to $unsolved_dir"
-                # Rename the unsolved.py file to unsolved_tmp.py
-                mv "${unsolved_dir}/unsolved.py" "${unsolved_dir}/unsolved_tmp.py"
-                echo "Renamed unsolved.py to unsolved_tmp.py"
-                # Rename the solved.py file to unsolved.py
-                mv "${unsolved_dir}/solved.py" "${unsolved_dir}/unsolved.py"
-                # Run the test.py file on the unsolved.py file
-                echo "Testing unsolved file"
-                cd "${unsolved_dir}"
-                echo "In the $(pwd) directory"
-                python tests.py unsolved.py
-                # Remove the unsolved.py file to the solved.
-                rm unsolved.py
-                # Move the unsolved_tmp.py file back to the "Unsolved" subdirectory
-                mv unsolved_tmp.py unsolved.py
-                # Move back to the root directory
-                #  cd ../
-                # echo "In the $(pwd) directory"
+                # Add the path of the solved file to the array
+                solved_files+=("$file")
+                for solved_file in "${solved_files[@]}"; do
+                    # Extract the directory name
+                    directory=$(dirname "$solved_file")
+                    echo "In the $directory directory"
+                    # Construct absolute paths for Solved and Unsolved directories
+                    solved_dir="$directory"
+                    echo "Solved Directory: $solved_dir"
+                    unsolved_dir="${directory/\/Solved/\/Unsolved}"
+                    echo "Unsolved Directory: $unsolved_dir"
+                    # Copy the solved.py file to the "Unsolved" subdirectory
+                    mv "${solved_dir}/solved.py" "${unsolved_dir}"
+                    echo "Copied $file to $unsolved_dir"
+                    # Rename the unsolved.py file to unsolved_tmp.py
+                    mv "${unsolved_dir}/unsolved.py" "${unsolved_dir}/unsolved_tmp.py"
+                    echo "Renamed unsolved.py to unsolved_tmp.py"
+                    # Rename the solved.py file to unsolved.py
+                    mv "${unsolved_dir}/solved.py" "${unsolved_dir}/unsolved.py"
+                    # Run the test.py file on the unsolved.py file
+                    echo "Testing unsolved file"
+                    cd "${unsolved_dir}"
+                    echo "In the $(pwd) directory"
+                    python tests.py unsolved.py
+                    # Remove the unsolved.py file to the solved.
+                    rm unsolved.py
+                    # Move the unsolved_tmp.py file back to the "Unsolved" subdirectory
+                    mv unsolved_tmp.py unsolved.py
+                    echo "Moved unsolved_tmp.py back to unsolved.py"
             fi
           done
