--- a/.github/workflows/PyUnit-testing.yml
+++ b/.github/workflows/PyUnit-testing.yml
@@ -51,31 +51,28 @@ jobs:
                 # Add the path of the solved file to the array
                 solved_files+=("$file")
                 for solved_file in "${solved_files[@]}"; do
+                    echo $(solved_file)
                     # Extract the directory name
-                    directory=$(dirname "$solved_file")
-                    echo "In the $directory directory"
+                    solved_directory=$(dirname "$solved_file")
+                    echo "In the $solved_directory directory"
                     # Construct absolute paths for Solved and Unsolved directories
-                    solved_dir="$directory"
-                    echo "Solved Directory: $solved_dir"
-                    unsolved_dir="${directory/\/Solved/\/Unsolved}"
-                    echo "Unsolved Directory: $unsolved_dir"
+                    # unsolved_dir="${solved_directory/\/Solved/\/Unsolved}"
+                    # echo "Unsolved Directory: $unsolved_dir"
                     # Copy the solved.py file to the "Unsolved" subdirectory
-                    mv "${solved_dir}/solved.py" "${unsolved_dir}"
-                    echo "Copied $file to $unsolved_dir"
+                    mv solved.py ../Unsolved/solved.py
+                    echo "Copied $file to unsolved directory"
                     # Rename the unsolved.py file to unsolved_tmp.py
-                    mv "${unsolved_dir}/unsolved.py" "${unsolved_dir}/unsolved_tmp.py"
+                    mv ../Unsolved/unsolved.py ../Unsolved/unsolved_tmp.py
                     echo "Renamed unsolved.py to unsolved_tmp.py"
                     # Rename the solved.py file to unsolved.py
-                    mv "${unsolved_dir}/solved.py" "${unsolved_dir}/unsolved.py"
+                    mv ../Unsolved/solved.py Unsolved/unsolved.py
                     # Run the test.py file on the unsolved.py file
                     echo "Testing unsolved file"
-                    cd "${unsolved_dir}"
-                    echo "In the $(pwd) directory"
-                    python tests.py unsolved.py
-                    # Remove the unsolved.py file to the solved.
-                    rm unsolved.py
+                    python ../Unsolved/tests.py
+                    mv ../Unsolved/solved.py solved.py
+                    echo "Moved unsolved.py back to solved.py"
                     # Move the unsolved_tmp.py file back to the "Unsolved" subdirectory
-                    mv unsolved_tmp.py unsolved.py
+                    mv ../Unsolved/unsolved_tmp.py ../Unsovled/unsolved.py
                     echo "Moved unsolved_tmp.py back to unsolved.py"
                 done
             fi
