--- a/.github/workflows/PyUnit-testing.yml
+++ b/.github/workflows/PyUnit-testing.yml
@@ -50,29 +50,28 @@ jobs:
             if [[ $file == *solved.py ]]; then
                 # Add the path of the solved file to the array
                 solved_files+=("$file")
-                for solved_file in "${solved_files[@]}"; do
-                    echo $(solved_file)
+                for ((i=0;i<${#solved_files[@]};i++)); do
+                    echo "Solved file: ${solved_files[$i]}"
                     # Extract the directory name
                     solved_directory=$(dirname "$solved_file")
                     echo "In the $solved_directory directory"
                     # Construct absolute paths for Solved and Unsolved directories
-                    # unsolved_dir="${solved_directory/\/Solved/\/Unsolved}"
-                    # echo "Unsolved Directory: $unsolved_dir"
+                    unsolved_dir="${solved_directory/\/Solved/\/Unsolved}"
                     # Copy the solved.py file to the "Unsolved" subdirectory
-                    mv solved.py ../Unsolved/solved.py
-                    echo "Copied $file to unsolved directory"
+                    mv "${solved_dir}/solved.py" "${unsolved_dir}/solved.py"
+                    echo "Copied $file to $unsolved_dir"
                     # Rename the unsolved.py file to unsolved_tmp.py
-                    mv ../Unsolved/unsolved.py ../Unsolved/unsolved_tmp.py
+                    mv "${unsolved_dir}/unsolved.py" "${unsolved_dir}/unsolved_tmp.py"
                     echo "Renamed unsolved.py to unsolved_tmp.py"
                     # Rename the solved.py file to unsolved.py
-                    mv ../Unsolved/solved.py Unsolved/unsolved.py
+                    mv "${unsolved_dir}/solved.py" "${unsolved_dir}/unsolved.py"
                     # Run the test.py file on the unsolved.py file
                     echo "Testing unsolved file"
-                    python ../Unsolved/tests.py
-                    mv ../Unsolved/solved.py solved.py
+                    python "${unsolved_dir}/tests.py"
+                    mv "${unsolved_dir}/solved.py" "${solved_dir}/solved.py"
                     echo "Moved unsolved.py back to solved.py"
                     # Move the unsolved_tmp.py file back to the "Unsolved" subdirectory
-                    mv ../Unsolved/unsolved_tmp.py ../Unsovled/unsolved.py
+                    mv "${unsolved_dir}/unolved_tmp.py" "${unsolved_dir}/unsolved.py"
                     echo "Moved unsolved_tmp.py back to unsolved.py"
                 done
             fi
