--- a/.github/workflows/PyUnit-testing.yml
+++ b/.github/workflows/PyUnit-testing.yml
@@ -37,17 +37,16 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install PyTest
         run: |
           python -m pip install --upgrade pip
+          pip install pytest
 
       - name: PyUnit Testing
         run: |
           for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
           # Check for solved.py files.
-            if [[ $file == */solved.py ]]; then
+            if [[ $file == *_solved.py || $file == *_tests.py ]]; then
               bash /home/runner/work/GitHub-Actions-Playground/GitHub-Actions-Playground/scripts/PyUnit_test.sh "${file}"
-            else
-              echo "No solved.py files found."
             fi
           done
