--- a/.github/workflows/PyUnit-testing.yml
+++ b/.github/workflows/PyUnit-testing.yml
@@ -37,10 +37,9 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install PyTest
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
 
       - name: PyUnit Testing
         run: |
